--- a/Site brabo/index.html
+++ b/Site brabo/index.html
@@ -20,7 +20,7 @@
     <p class="texto">No ano de 2023, foram selecionados 11 alunos do Gastão para irem a um intercâmbio na frança.</p>
     <p class="texto">Após sua finalização, os alunos tiveram que fazer um projeto para que seja discutido o que foi visto na frança.</p>
     <p class="texto">Portanto, nesse caso, <b>EU</b>, Victor, decidi realizar um site para conter as informações sobre meu projeto, desde o vídeo de meu relato, até os próprios slides que serão usados no dia 15/04(/2024).</p>
-    <p class="texto">O tema de meu projeto, é a comparação da ecologia francesa/europeia, com a brasileira</p>
+    <p class="texto">O tema de meu projeto, é a comparação da ecologia francesa/europeia, com a brasileira. O título do projeto é <b>Diferenças socioambientais da França e do Brasil</b></p>
     </div>
 </body>
 </html>
