--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site ecológico</title>
     <link rel="stylesheet" href="filtro.css">
+    <script src="aquele js de lei.js"></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <br>
@@ -15,12 +17,18 @@
  
     <p class="texto" id="p1">Esse site será utilizado para o meu projeto de intercâmbio.</p>
 
-    <div id="contextodiv">
-    <h3 class="texto" id="titulocontexto">Caso você tenha caído de paraquedas:</h2>
-    <p class="texto">No ano de 2023, foram selecionados 11 alunos do Gastão para irem a um intercâmbio na frança.</p>
-    <p class="texto">Após sua finalização, os alunos tiveram que fazer um projeto para que seja discutido o que foi visto na frança.</p>
-    <p class="texto">Portanto, nesse caso, <b>EU</b>, Victor, decidi realizar um site para conter as informações sobre meu projeto, desde o vídeo de meu relato, até os próprios slides que serão usados no dia 15/04(/2024).</p>
-    <p class="texto">O tema de meu projeto, é a comparação da ecologia francesa/europeia, com a brasileira</p>
+
+    <h3 class="texto" id="titulocontexto">Caso você tenha caído de paraquedas:</h3>
+     <div id="contextodiv">
+        <img id="imagem" src="NósNoAeroporto.png" alt="Nós no aeroporto no dia de viagem">
+        <div class="clear"></div>
+        <p class="textodiv1">No ano de 2023, foram selecionados 11 alunos do Gastão para irem a um intercâmbio na frança.</p>
+        <p class="textodiv1">Após sua finalização, os alunos tiveram que fazer um projeto para que seja discutido o que foi visto na frança.</p>
+        <p class="textodiv1">Portanto, nesse caso, <b>EU</b>, Victor, decidi realizar um site para conter as informações sobre meu projeto, desde o vídeo de meu relato, até os próprios slides que serão usados no dia 15/04(/2024).</p>
+        <p class="textodiv1">O tema de meu projeto, é a comparação da ecologia francesa/europeia, com a brasileira</p>
     </div>
+</div>
+    <button onclick="mostrarOcultarDiv()">Clique aqui para ver o contexto</button>
 </body>
 </html>
+
