--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <br>
     <div class="saudacoes">
          <p class="paragrafo1" id="titulo"><b>Olá.</b></p> 
-         <p class="paragrafo1" id="agradecimento"><b>Primeiramente, obrigado pela disposição a ver o site, nem mesmo que voê apenas tenha entrado para ver e depois sair.</b></p>
+         <p class="paragrafo1" id="agradecimento"><b>Primeiramente, obrigado pela disposição a ver o site, nem mesmo que você apenas tenha entrado para ver e depois sair.</b></p>
     </div>   
  
     <p class="texto" id="p1">Esse site será utilizado para o meu projeto de intercâmbio.</p>
