--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site ecológico</title>
     <link rel="stylesheet" href="filtro.css">
+    <link rel="stylesheet" href="homer.css">
     <script src="aquele js de lei.js"></script>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="acontece.png" type="image/x-icon">
 </head>
 <body>
     <ul>
@@ -16,8 +17,7 @@
     </body>
     <br>
     <div class="saudacoes">
-         <p class="paragrafo1" id="titulo"><b>Olá.</b></p> 
-         <p class="paragrafo1" id="agradecimento"><b>Primeiramente, obrigado pela disposição a ver o site, nem mesmo que você apenas tenha entrado para ver e depois sair.</b></p>
+        <p class="paragrafo1" id="agradecimento"><b>Primeiramente, obrigado pela disposição para ver o site, mesmo que seja apenas por curiosidade.</b></p>
     </div>   
  
     <p class="texto" id="p1">Esse site será utilizado para o meu projeto de intercâmbio.</p>
@@ -28,12 +28,12 @@
         <img id="imagem" src="NósNoAeroporto.png" alt="Nós no aeroporto no dia de viagem">
         <div class="clear"></div>
         <p class="textodiv1">No ano de 2023, foram selecionados 11 alunos do Gastão para irem a um intercâmbio na frança.</p>
-        <p class="textodiv1">Após sua finalização, os alunos tiveram que fazer um projeto para que seja discutido o que foi visto na frança.</p>
-        <p class="textodiv1">Portanto, nesse caso, <b>EU</b>, Victor, decidi realizar um site para conter as informações sobre meu projeto, desde o vídeo de meu relato, até os próprios slides que serão usados no dia 15/04(/2024).</p>
-        <p class="textodiv1">O tema de meu projeto, é a comparação da ecologia francesa/europeia, com a brasileira</p>
+        <p class="textodiv1">Após sua finalização, os alunos tiveram que fazer um projeto para que fosse discutido o que foi visto na frança.</p>
+        <p class="textodiv1">Portanto, nesse caso, <b>EU</b>, Victor, decidi realizar um site que contenha as informações sobre meu projeto, desde o vídeo com meu relato, até os próprios slides que serão usados no dia 15/04/2024, na entrega.</p>
+        <p class="textodiv1">O tema de meu projeto, é a comparação da ecologia francesa/europeia, com a brasileira. (Por isso a escolha de cores)</p>
     </div>
 </div>
-    <button onclick="mostrarOcultarDiv()">Clique aqui para ver o contexto</button>
+    <button id="botaotexto1"onclick="mostrarOcultarDiv()">Ver introdução</button>
 </body>
 </html>
 
